--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-      <meta charset="UTF-8">
-      <title>Max´s Portfolio</tittle>
-    </head>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Max Portfolio</title>
+</head>
     
-    <body>
-        <h1>Maxíkovo Portfolio</h1>
-        <h2>Jsem web developer</h2>
-        <hr/>
+<body>
+    <h1>Maxíkovo Portfolio</h1>
+    <h2>Jsem web developer</h2>
+    <hr/>
+    <a href = "./public/movie-ranking.html">
+        <h2>Movie ranking project</h2> 
+    </a>
+    <img src = "./assets/images/movie-ranking.png" width="300"/>
+    <a href ="./public/birthday-invite.html">
+        <h2>Birthday invite project</h2>
+    </a>
+    <img src="./assets/images/birthday.png" width="300"/>
+    <hr/>
+    <a href ="./public/about.html">About me</a>
+    <a href ="./public/contact.html">Contact me</a>
+</body>
 
-        <a href = "./public/movie-ranking.html">
-            <h2>Movie ranking project</h2> 
-        </a>
-        <img src = "./assets/images/movie-ranking.png" width="500"/>
-
-        <a href ="./public/birthday-invite.html">
-            <h2>Birthday invite project</h2>
-        </a>
-        <img src="./assets/images/birthday.png" width="500"/>
-
-         <hr/>
-
-
-        <a href ="./public/about.html">About me</a>
-        <a href ="./public/contact.html">Contact me</a>
-    </body>
-
-</html>
+</html> 
